Update the user form

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -2,6 +2,9 @@
   %dt Name
   %dd= form.text_field :name
 
+  %dt Email
+  %dd= form.text_field :email
+
   %dt Password
   %dd= form.text_field :password
   
