Use rails' has_secure_password

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,13 +1,16 @@
 %dl
   %dt Name
-  %dd= form.text_field :name
+  %dd= form.text_field :name, autofocus: true
 
   %dt Email
   %dd= form.text_field :email
 
   %dt Password
-  %dd= form.text_field :password
-  
+  %dd= form.password_field :password
+
+  %dt Password Confirmation
+  %dd= form.password_field :password_confirmation
+
   %dt
     = form.check_box :admin
     %label{:for=>'user[admin]'} Admin
